css/shanti-main-images.css
/** Custom Color Settings **/
.titlearea,
.carousel-control,
.breadcrumb .icon,
.nav-justified>li.active a,
.nav-justified>li.active a:hover,
.nav-justified>li.active a:active {
  background-color: #c4be28 !important;
}

.nav-justified>li.active::before {
  color: #c4be28 !important;
}
    /* darker shades below are used to better define details */
.bootstrap-select.btn-group.show-tick .dropdown-menu li.selected a .check-mark,
.bootstrap-select.btn-group.show-tick .dropdown-menu li.selected a:active .check-mark,
.navbar-brand:hover .site-slogan,
.main-content .selectpicker .caret::before,
.view-section .nav-tabs>li.active>a, 
.view-section .nav-tabs>li.active>a:hover, 
.view-section .nav-tabs>li.active>a:active,
.view-section .fancytree-container .glyphicon,
.view-section .fancytree-container .fancytree-node:hover > .glyphicon,
.view-section .fancytree-container .fancytree-node:active > .glyphicon,
.view-section .fancytree-node.fancytree-active > .glyphicon,
.view-section .fancytree-node.fancytree-selected > .glyphicon {
  color: rgb(196,190,40) !important;
}

.view-section .nav-tabs>li.active>a, 
.view-section .nav-tabs>li.active>a:hover, 
.view-section .nav-tabs>li.active>a:active {
  border-top-color: rgb(196,190,40) !important;
}

.shanti-thumbnail-image.shanti-field-visuals .icon {
  background: rgba(196,190,40,0.8);
}

.navbar-brand:active .site-slogan {
  color: #444 !important;
}

.titlearea{ -webkit-box-shadow: inset 0 1px 5px 3px rgba(50, 50, 50, 0.100);box-shadow: inset 0 1px 5px 3px rgba(50, 50, 50, 0.100);}
.titlearea > div{ -webkit-box-shadow: inset 0 -2px 10px -4px rgba(0, 0, 0, 0.000);box-shadow: inset 0 -2px 10px -4px rgba(0, 0, 0, 0.000);}

/* Pagerer clear both (should this be in shanti-main.css?) */
table.pagerer { 
  clear: both; 
  width:100%; 
  margin-top: -0.7rem;
}
.view-media-sharedshelf-my-images table.pagerer:last-child{ 
  margin-bottom: 5rem;
  margin-top: 1.5rem;
}
ul.pager{ margin: 0 0 0.5rem;}





.og-expander{ 
  border-bottom:0.75rem double #eee;
}

.og-expander-inner {
  background: #222;
  padding: 2.5rem 5rem 4rem;
}

div.item.last-row{ clear:both;}

.og-fullimg {
  padding: 1.5rem 1rem 0 0;
  margin-left:1rem;
  width: 54%;
  min-height: 200px; /* helps disply the img loading spinner */
}

.og-details {
  padding: 0;
  width: 44%;
  height: auto;
}

.content-section .og-details a {
  border: none;
  color: #999;
}

.content-section .og-details a:hover {
  color: #ccc;
}

.content-section .og-details a:active {
  color: #eee;
}

.content-section .og-details a:last-child {
  margin-top: 1rem;
}

.og-grid .item {
  margin:0 5px 10px 0;
  display: -moz-inline-box;
  display: inline-block;
  vertical-align: top;
  z-index: 1;
}

.og-fullimg img {
  margin: 0 0 0 1rem;
}

.og-details p {
  font-size: 1em;
  font-family: 'Helvetica Neue',helvetica,arial,sans-serif;
}

.og-details h3 {
  font-size: 1.44em;
  margin: 1.5rem 0 1.25rem;
  line-height:1.32em;
}

.og-close {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  z-index: 10;
}


.og-details .tab-content {
  background: #222;
}

.og-details #info ul {
  margin: 0;
  padding: 0;
}

.og-details #info li {
  list-style-type: none;
  color: #c0c0c0;
  margin: 1.5rem 0 0 0;
  padding: 0;
}

.og-details #info li label {
  color: #999;
  display: block;
  font-size: 70%;
  margin-left: 0;
}

.og-details .nav-tabs {
  border-bottom: 1px solid #555;
}

.og-details .nav-tabs>li>a {
  border: none;
  color: #999;
  background: transparent;
  font-size: 0.88em;
  font-family: 'Helvetica Neue',helvetica,arial,sans-serif;
}

.og-details .nav-tabs>li>a:hover,
.og-details .nav-tabs>li>a:focus,
.og-details .nav-tabs>li>a:active {
  border: none;
  color: #eee;
}

.og-details .nav-tabs>li>a::before {
  content: '';
  display: none;
}

.og-details .tab-pane {
  padding-top: 0rem;
}

.og-details .tab-pane ul {
  font-size: 1.12em;
}

/**** nav-arrow buttons ****/

.og-nav-arrow{
  position: absolute;
  top: 50%;
  width: 6rem;
  height: 10rem;
  border-radius: .3rem;
  border: 1px solid #303030;
  margin-top: -5rem;
  background: #242424;
  box-shadow: inset 0 0 10px #111;
  display: inline-block;
}

.og-nav-arrow:hover{
  background:#111;
  border-color:#444;
}

.og-nav-arrow:active{
  border-color:#555;
  background:#222;
}

.next.og-nav-arrow{
  position: absolute;
  right:-1rem;
  text-shadow: 0.2rem 0 0.5rem #111;
}

.prev.og-nav-arrow{
  position: absolute;
  left: -1rem;
  text-shadow: 0 0.2rem 0.5rem #111;
}

.og-nav-arrow .icon{
  font-size:3.5rem;
  width: 6rem;
  height: 10rem;
  position:relative;
  top:3rem;
  background:transparent;
}

.og-nav-arrow .icon::before{
  position:relative;
  color: #444;
  background:transparent;
}

.next.og-nav-arrow .icon::before{
  content: '\e607';
  right: -0.7rem;
}

.prev.og-nav-arrow .icon::before{
  content: '\e606';
  left: 1.4rem;
}

.og-nav-arrow:hover .icon::before{
  color:#707070;
  background:transparent !important;
}

.og-nav-arrow:active .icon::before{
  color:#aaa;
  background:transparent !important;
}





.nav-tabs>li.active>a,  
.nav-tabs>li.active>a:hover,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:active {
  background: #222;
  color: #ccc;
  border: 1px solid #555;
  border-bottom: none;
  border-top: 2px solid #909090;
  border-radius: 0.2rem;
}

/* .last-row ~ .item:last-of-type{ border:2px solid red;} .last-row ~ .item:last-of-type::after{ height:100px;display:inline-block;min-width:100%;width:100%;} */

/* single image page */
.page-file .file-image {
  border-left: 3rem dotted #e3e3e3;
  border-right: 3rem dotted #e3e3e3;
  margin-top: 2rem;
  padding: 0 2rem 2rem;
}

.page-file .file-image img {
  float: right;
  margin: 2rem 1rem 2rem 3rem;
  padding: 0.7rem;
  border-radius: 0.2rem;
  background: #fff;
  border: 1px solid #d0d0d0;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.075);
  box-shadow: 0 1px 2px rgba(0,0,0,.075);
}

.page-file .file-image .field .field-label {
  margin-top: 1.5rem;
  text-transform: uppercase;
  font-family: 'museo-sans-500',helvetica,arial,sans-serif;
}

.page-file .main-col .block-system > .content {
  padding: 0 1.5rem 1.5rem;
  margin-top: -0.5rem;
  margin-bottom: 7rem;
  border: 4px solid #e7e7e7;
}

.page-file .main-col .file-image > .content:nth-of-type(1) {
  margin-top: -0.5rem;
  background: white;
  border: 1px solid #e9e9e9;
  border-top: 1rem solid #ccc;
  padding: 0rem 2rem 2rem 3rem;
  -webkit-box-shadow: -1px 2px 5px #e0e0e0;
  box-shadow: -1px 2px 5px #e0e0e0;
  border-collapse: separate;
}

.field-name-field-sharedshelf-solr-search {
  display: none;
}

/*----- PDF Styles -----*/
body.page-file-pdf .main-col .block-system > .content {
	border-left: none;
	border-right: none;
	border-bottom: none;
}

div.pdfextlink { float: right; }

/*------ File Page ------*/
.file-ss-div {
	margin: 12px auto;
}

.file-ss-div .field {
	margin: 4px 0 0 0;
}







/*-------------------------*/
/*=== max-width (first) ===*/
/*-------------------------*/

@media screen and (max-width: 992px) {

  .page-file .file-image img {
    float: none;
    margin: 2rem auto;
  }

  .og-details{
    padding-left: 2em;
    width: 44%;
  }

  .page-file .main-col .file-image > .content:nth-of-type(1) { }
}

@media screen and (max-width: 767px) {

  .og-fullimg {
    padding: 0;
    margin-top: 1rem;
    margin-left:0;
    height:auto;
  }

  .og-details{
    padding-right: 2em;
    padding-top: 2rem;
    margin-top:0;
  }

  .og-fullimg, 
    .og-details {
    display: block;
    width: 100%;
    border: none;
    margin-top: 2rem;
  }

  .og-details h3 {
    font-size: 1.44em;
    margin: 1rem 0.5rem 1.25rem;
    line-height: 1.25em;
  }

  .og-expander-inner {
    overflow-x: auto;
    padding-bottom: 5rem;
  }

  .og-fullimg img {
    margin: 0;
  }
}

@media screen and (max-width: 600px) {

  .page-file .file-image {
    border: none;
    padding: 0;
  }
}




/*--------------------------*/
/*=== min-width (second) ===*/
/*--------------------------*/

@media screen and (min-width: 768px) {

 } 

@media screen and (min-width: 992px) {

  .og-details {
    padding: 0.3em 0 0 3rem;
    width: 43%;
  }

  .og-fullimg{
    padding: 1.5rem 1rem 0 0;
  }
}

@media screen and (min-width: 1150px) {

  .og-details {

  }
}

